Added a div and h4 under h2

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <div class="main-content">
         <div class="welcome-box">
             <h1>Welcome to SkyHigh</h1>
+            <div> <h4> Dream. Plan. Fly. </h4>        </div>
             <p>Your One Stop Solution for Career Guidance</p>
             <p>Use the sidebar to navigate through the powerful tools SkyHigh offers:</p>
             <ul style="text-align: left;">
